# retarfilib

./: README.md  pyproject.toml  setup.py
retarfilib/: __init__.py  log.py  mecabsplit.py  seed.py
tests/: test_log.py  test_mecabsplit.py  test_seed.py
