[tool.poetry]
name = "retarfilib"
version = "0.0.2"  # using poetry-dynamic-versioning
description = ""
authors = ["Masahiro Suzuki <msuzuki9609@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "retarfilib", from = "" }
]

[tool.poetry.dependencies]
python = "^3.8"
mecab-python3 = "^1.0.3"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.isort]
profile = "black"
force_single_line = true

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true