[project]
name = "retarfilib"
version = "0.1.0"

[tool.poetry]
name = "retarfilib"
version = "0.1.0"
description = ""
authors = ["Masahiro Suzuki <msuzuki9609@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "retarfilib", from = "" }
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_single_line = true

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true